tgthrProgramManagement/force-app/main/default/objects/Diagnosis__c/Diagnosis__c.object-meta.xml
<CustomObject>
    <description>Links the Code Set records to the Care Plan</description>
    <label>Diagnosis</label>
    <nameField>
        <label>Diagnosis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Diagnoses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>