tgthrProgramManagement/force-app/main/default/objects/Diagnosis__c/fields/Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Care plan this diagnosis is associated with</description>
    <inlineHelpText>Active Care Plan Diagnosis is assigned too</inlineHelpText>
    <label>Care Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CarePlan.Type__c</field>
            <operation>equals</operation>
            <value>Clinical</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CarePlan</referenceTo>
    <relationshipLabel>Diagnoses</relationshipLabel>
    <relationshipName>Diagnoses</relationshipName>
    <type>Lookup</type>
</CustomField>