tgthrProgramManagement/force-app/main/default/objects/Diagnosis__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of the diagnosis (Mental Health, Substance Use, etc).</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mental Health</fullName>
                <default>true</default>
                <label>Mental Health</label>
            </value>
            <value>
                <fullName>Substance Use</fullName>
            </value>
            <value>
                <fullName>Physical Health</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>