tgthrProgramManagement/force-app/main/default/objects/Diagnosis__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Diagnoses</relationshipLabel>
    <relationshipName>Diagnoses</relationshipName>
    <type>Lookup</type>
</CustomField>