tgthrProgramManagement/force-app/main/default/objects/Diagnosis__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <formula>Code_Name__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code</label>
    <type>Text</type>
</CustomField>