tgthrProgramManagement/force-app/main/default/objects/Diagnosis__c/fields/Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Code_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup the diagnosis/related code for this participant</description>
    <inlineHelpText>Lookup the diagnosis/related code for this participant</inlineHelpText>
    <label>Code Name</label>
    <referenceTo>Code__c</referenceTo>
    <relationshipLabel>Diagnoses</relationshipLabel>
    <relationshipName>Diagnoses</relationshipName>
    <type>Lookup</type>
</CustomField>