tgthrProgramManagement/force-app/main/default/objects/Diagnosis__c/fields/Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Date__c</fullName>
    <description>Date the diagnosis was officially made.</description>
    <label>Diagnosis Date</label>
    <type>Date</type>
</CustomField>