tgthrProgramManagement/force-app/main/default/objects/Diagnosis__c/fields/Onset_Date__c.field-meta.xml
<CustomField>
    <fullName>Onset_Date__c</fullName>
    <description>Date when the condition started.</description>
    <label>Onset Date</label>
    <type>Date</type>
</CustomField>