tgthrProgramManagement/force-app/main/default/objects/Diagnosis__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is the primary diagnosis for the interaction/case.</description>
    <label>Primary Diagnosis</label>
    <type>Checkbox</type>
</CustomField>