tgthrProgramManagement/force-app/main/default/objects/Diagnosis__c/fields/Primary_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Primary_Eligible__c</fullName>
    <description>Identifies if this diagnosis is eligible to be primary or not.</description>
    <formula>TEXT( Code_Name__r.Primary_Diagnosis_Eligible__c )</formula>
    <inlineHelpText>Identifies if this diagnosis is eligible to be primary or not.</inlineHelpText>
    <label>Primary Eligible?</label>
    <type>Text</type>
</CustomField>