tgthrProgramManagement/force-app/main/default/objects/Diagnosis__c/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <description>Date the diagnosis was resolved or became inactive.</description>
    <label>Resolved Date</label>
    <type>Date</type>
</CustomField>