tgthrProgramManagement/force-app/main/default/objects/Diagnosis__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type/acuity of the diagnosis (e.g. Acute, Chronic).</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acute</fullName>
            </value>
            <value>
                <fullName>Chronic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>