tgthrProgramManagement/force-app/main/default/objects/Diagnosis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Care_Plan__c</columns>
    <columns>Code_Name__c</columns>
    <columns>Primary_Eligible__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>